[gd_scene load_steps=83 format=3 uid="uid://et4mwi4b2l3w"]

[ext_resource type="Texture2D" uid="uid://1qcieda2t8ve" path="res://player/player.png" id="1_72phs"]
[ext_resource type="Script" path="res://player/player.gd" id="1_uk7lu"]
[ext_resource type="PackedScene" uid="uid://cicux0f7842ku" path="res://player/player_1p.tscn" id="2_vnqi5"]
[ext_resource type="PackedScene" uid="uid://du32mnelvpawi" path="res://player/ghost.tscn" id="2_x2nxy"]
[ext_resource type="PackedScene" uid="uid://ckurri1eqd46s" path="res://user_interface/UI.tscn" id="3_1ug8a"]
[ext_resource type="PackedScene" uid="uid://lbni43rxi7l" path="res://menu/gameover/game_over.tscn" id="4_q5dxk"]
[ext_resource type="Script" path="res://user_interface/ui.gd" id="5_lxjxr"]
[ext_resource type="Theme" uid="uid://d1vxaagqymyh5" path="res://menu/main_menu.tres" id="6_vdy0p"]
[ext_resource type="Texture2D" uid="uid://hssma2ppw2p1" path="res://menu/player/health.png" id="7_6an51"]
[ext_resource type="Texture2D" uid="uid://cejo3myy77f4h" path="res://menu/player/Skill.png" id="8_egrg3"]
[ext_resource type="Texture2D" uid="uid://dq2bu7y5lu04h" path="res://menu/player/up.png" id="8_jj24f"]
[ext_resource type="AudioStream" uid="uid://byo5hnj7lspid" path="res://audio/sfx/dash.mp3" id="9_1f6y0"]
[ext_resource type="AudioStream" uid="uid://bx2wkffgjm1h7" path="res://audio/sfx/heal.mp3" id="9_4kwxa"]
[ext_resource type="AudioStream" uid="uid://d050c8aw6uwkc" path="res://audio/sfx/deathEnemy.mp3" id="9_7kft1"]
[ext_resource type="AudioStream" uid="uid://ioh72cugpnn0" path="res://audio/sfx/basic.mp3" id="9_cxnif"]
[ext_resource type="AudioStream" uid="uid://dtw3odeu4aqpr" path="res://audio/sfx/click.mp3" id="10_mfoa1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qqpk4"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gytxo"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1bud"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m05qm"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mmxs"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oic1e"]
atlas = ExtResource("1_72phs")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocpvo"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_danhm"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv4tt"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dluvw"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2alpn"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5si2"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5id34"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeykp"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj8t"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sc86"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wopcm"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rn38"]
atlas = ExtResource("1_72phs")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvtwe"]
atlas = ExtResource("1_72phs")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w27ai"]
atlas = ExtResource("1_72phs")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hjm7"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_220gr"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flhj8"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88q0g"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2gf4"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vcxw"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ovf7"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rklw2"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd7ll"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujgx5"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg3ts"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_huqt4"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eij0"]
atlas = ExtResource("1_72phs")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qstnx"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2183"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jke3d"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lktfk"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcyof"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j012"]
atlas = ExtResource("1_72phs")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkyet"]
atlas = ExtResource("1_72phs")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70i7u"]
atlas = ExtResource("1_72phs")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jacee"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3p72"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfir4"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ef8"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3k2r"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf54v"]
atlas = ExtResource("1_72phs")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew4ww"]
atlas = ExtResource("1_72phs")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkecx"]
atlas = ExtResource("1_72phs")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3leco"]
atlas = ExtResource("1_72phs")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s22ti"]
atlas = ExtResource("1_72phs")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnowr"]
atlas = ExtResource("1_72phs")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g4q8"]
atlas = ExtResource("1_72phs")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_idfak"]
atlas = ExtResource("1_72phs")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy2pn"]
atlas = ExtResource("1_72phs")
region = Rect2(320, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cekcg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqpk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gytxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1bud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m05qm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mmxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oic1e")
}],
"loop": false,
"name": &"basic1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocpvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_danhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv4tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dluvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2alpn")
}],
"loop": false,
"name": &"basic2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5si2")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5id34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeykp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sc86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wopcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rn38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvtwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w27ai")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hjm7")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_220gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flhj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88q0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2gf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vcxw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ovf7")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rklw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd7ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujgx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg3ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huqt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eij0")
}],
"loop": false,
"name": &"skill1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qstnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2183")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jke3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lktfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcyof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j012")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkyet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70i7u")
}],
"loop": false,
"name": &"skill2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jacee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3p72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfir4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ef8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3k2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf54v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew4ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkecx")
}],
"loop": false,
"name": &"skill3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3leco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s22ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnowr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g4q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idfak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy2pn")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubnid"]
size = Vector2(24, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84wh2"]
size = Vector2(43, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8yoh"]
size = Vector2(24, 48)

[sub_resource type="LabelSettings" id="LabelSettings_vhq8k"]
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_gfne2"]
font_size = 21

[sub_resource type="Animation" id="Animation_3fpol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../user_interface/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../user_interface/red:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../user_interface/red:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_j7ys7"]
resource_name = "death_transisition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../user_interface/red:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_pval1"]
resource_name = "quit_transisition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../user_interface/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pycsc"]
resource_name = "start_transisition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../user_interface/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../user_interface/red:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6rbo"]
_data = {
"RESET": SubResource("Animation_3fpol"),
"death_transisition": SubResource("Animation_j7ys7"),
"quit_transisition": SubResource("Animation_pval1"),
"start_transisition": SubResource("Animation_pycsc")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 128
script = ExtResource("1_uk7lu")
skill1p = ExtResource("2_vnqi5")
ghost_node = ExtResource("2_x2nxy")
game_over = ExtResource("4_q5dxk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cekcg")
animation = &"jump"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 0
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ubnid")

[node name="Hitbox" type="Area2D" parent="." groups=["HitboxPlayer"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(9.5, -0.5)
shape = SubResource("RectangleShape2D_84wh2")
disabled = true

[node name="Hurtbox" type="Area2D" parent="." groups=["HurtboxPlayer"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_n8yoh")

[node name="TimerInvisible" type="Timer" parent="."]
one_shot = true

[node name="TimerAttacked" type="Timer" parent="."]

[node name="Skill" type="Node" parent="."]

[node name="TimerSkill1CD" type="Timer" parent="Skill"]
one_shot = true

[node name="TimerSkill2CD" type="Timer" parent="Skill"]
one_shot = true

[node name="TimerSkill3CD" type="Timer" parent="Skill"]
one_shot = true

[node name="Dash" type="Node" parent="."]

[node name="TimerDash" type="Timer" parent="Dash"]
wait_time = 0.1

[node name="TimerDashInv" type="Timer" parent="Dash"]
one_shot = true

[node name="TimerDashCD" type="Timer" parent="Dash"]
one_shot = true

[node name="user_interface" parent="." instance=ExtResource("3_1ug8a")]
script = ExtResource("5_lxjxr")

[node name="up1" type="Label" parent="user_interface"]
top_level = true
z_index = 100
texture_filter = 1
offset_left = 113.0
offset_top = 658.0
offset_right = 140.0
offset_bottom = 706.0
theme = ExtResource("6_vdy0p")
text = "3"
label_settings = SubResource("LabelSettings_vhq8k")

[node name="health1" type="Label" parent="user_interface"]
top_level = true
z_index = 100
texture_filter = 1
offset_left = 278.0
offset_top = 658.0
offset_right = 305.0
offset_bottom = 706.0
theme = ExtResource("6_vdy0p")
text = "3"
label_settings = SubResource("LabelSettings_vhq8k")

[node name="key" type="Label" parent="user_interface"]
texture_filter = 1
offset_left = 924.0
offset_top = 693.0
offset_right = 1183.0
offset_bottom = 716.0
theme = ExtResource("6_vdy0p")
text = "J           K           L          ;"
label_settings = SubResource("LabelSettings_gfne2")

[node name="up" type="Sprite2D" parent="user_interface"]
z_index = 100
texture_filter = 1
position = Vector2(56, 670)
scale = Vector2(0.0639345, 0.0639344)
texture = ExtResource("8_jj24f")
hframes = 2

[node name="health" type="Sprite2D" parent="user_interface"]
top_level = true
z_index = 100
texture_filter = 1
position = Vector2(227, 670)
scale = Vector2(0.0527777, 0.0527777)
texture = ExtResource("7_6an51")

[node name="basic" type="Sprite2D" parent="user_interface"]
z_index = 100
texture_filter = 1
position = Vector2(962, 666)
scale = Vector2(0.112095, 0.112095)
texture = ExtResource("8_egrg3")
hframes = 4

[node name="skill1" type="Sprite2D" parent="user_interface"]
z_index = 100
texture_filter = 1
position = Vector2(1043, 666)
scale = Vector2(0.112095, 0.112095)
texture = ExtResource("8_egrg3")
hframes = 4
frame = 2

[node name="skill1" type="Label" parent="user_interface/skill1"]
top_level = true
z_index = 100
texture_filter = 1
offset_left = 1030.0
offset_top = 655.0
offset_right = 1057.0
offset_bottom = 703.0
theme = ExtResource("6_vdy0p")
text = "3"
label_settings = SubResource("LabelSettings_vhq8k")
horizontal_alignment = 1

[node name="skill2" type="Sprite2D" parent="user_interface"]
z_index = 100
texture_filter = 1
position = Vector2(1125, 666)
scale = Vector2(0.112095, 0.112095)
texture = ExtResource("8_egrg3")
hframes = 4
frame = 1

[node name="skill2" type="Label" parent="user_interface/skill2"]
top_level = true
z_index = 100
texture_filter = 1
offset_left = 1112.0
offset_top = 655.0
offset_right = 1139.0
offset_bottom = 703.0
theme = ExtResource("6_vdy0p")
text = "3"
label_settings = SubResource("LabelSettings_vhq8k")
horizontal_alignment = 1

[node name="skill3" type="Sprite2D" parent="user_interface"]
z_index = 100
texture_filter = 1
position = Vector2(1207, 666)
scale = Vector2(0.112095, 0.112095)
texture = ExtResource("8_egrg3")
hframes = 4
frame = 3

[node name="skill3" type="Label" parent="user_interface/skill3"]
top_level = true
z_index = 100
texture_filter = 1
offset_left = 1183.0
offset_top = 654.0
offset_right = 1229.0
offset_bottom = 702.0
theme = ExtResource("6_vdy0p")
text = "230"
label_settings = SubResource("LabelSettings_vhq8k")
horizontal_alignment = 1

[node name="red" type="ColorRect" parent="user_interface"]
modulate = Color(1, 1, 1, 0)
z_index = 100
offset_left = -182.0
offset_top = -156.0
offset_right = 1515.0
offset_bottom = 830.0
color = Color(0.431373, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="user_interface"]
modulate = Color(1, 1, 1, 0)
offset_left = -182.0
offset_top = -156.0
offset_right = 1471.0
offset_bottom = 892.0
color = Color(0, 0, 0, 1)

[node name="transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../SFX")
libraries = {
"": SubResource("AnimationLibrary_l6rbo")
}
autoplay = "start_transisition"

[node name="SFX" type="Node" parent="."]

[node name="Basic1" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_7kft1")
pitch_scale = 2.04
bus = &"SFX"

[node name="Skill2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_mfoa1")
pitch_scale = 0.46
bus = &"SFX"

[node name="Basic2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_cxnif")
pitch_scale = 3.27
bus = &"SFX"

[node name="Dash" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_1f6y0")
volume_db = -7.496
pitch_scale = 4.0
bus = &"SFX"

[node name="Heal" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_4kwxa")
pitch_scale = 0.33
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TimerInvisible" to="." method="_on_timer_invisible_timeout"]
[connection signal="timeout" from="TimerAttacked" to="." method="_on_timer_attacked_timeout"]
[connection signal="timeout" from="Skill/TimerSkill1CD" to="." method="_on_timer_skill_1cd_timeout"]
[connection signal="timeout" from="Skill/TimerSkill2CD" to="." method="_on_timer_skill_2cd_timeout"]
[connection signal="timeout" from="Skill/TimerSkill3CD" to="." method="_on_timer_skill_3cd_timeout"]
[connection signal="timeout" from="Dash/TimerDash" to="." method="_on_timer_dash_timeout"]
[connection signal="timeout" from="Dash/TimerDashInv" to="." method="_on_timer_dash_inv_timeout"]
[connection signal="timeout" from="Dash/TimerDashCD" to="." method="_on_timer_dash_cd_timeout"]
